# systemctl-bot

./: .gitignore  Cargo.toml  README.md  builder.go  builder_test.go  commands.go  commands_test.go  config.go  config_test.go  flake.nix  go.mod  go.sum  handler.go  handler_test.go  main.go  systemd.go  systemd_test.go  unit.go  unit_test.go  utils_test.go
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
internal/builder/: builder.go  builder_test.go
internal/config/: config.go  config_test.go
internal/handler/: commands.go  commands_test.go  handler.go  handler_test.go
internal/status/: status.go  status_test.go  watcher.go  watcher_test.go
src/: builder.rs  client.rs  command.rs  commands.rs  config.rs  handler.rs  main.rs  parser.rs  process.rs  register.rs  status_monitor.rs  systemctl.rs  systemd_status.rs  units.rs
systemd/system/: systemctl-bot.service
