[package]
name = "systemctl-bot"
version = "0.4.2"
description = "Control your Linux server from Discord"
edition = "2021"
publish = false

[dependencies]
futures = "0.3"
indexmap = "2.2"
itertools = "0.12"
serde_json = "1.0"
tokio-stream = "0.1"

[dependencies.bitflags]
version = "2.4"
features = ["serde"]

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.config]
version = "0.14"
default-features = false
features = ["toml"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["cache", "client", "gateway", "model", "rustls_backend", "unstable_discord_api"]

[dependencies.tokio]
version = "1.18"
features = ["process", "rt-multi-thread"]

[dependencies.zbus]
version = "3.2"
default-features = false
features = ["tokio"]
