[package]
name = "systemctl-bot"
version = "0.4.2"
description = "Control your Linux server from Discord"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.86"
futures = "0.3"
shaku = "0.6.2"
tokio-stream = "0.1"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.config]
version = "0.13"
default-features = false
features = ["toml"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["cache", "client", "gateway", "model", "rustls_backend", "unstable_discord_api"]

[dependencies.tokio]
version = "1.18"
features = ["process", "rt-multi-thread"]

[dependencies.zbus]
version = "3.2"
default-features = false
features = ["tokio"]
