[package]
name = "systemctl-bot"
version = "0.4.2"
description = "Control your Linux server from Discord"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.96"
async-trait = "0.1.86"
futures = "0.3"
mockall = "0.13.1"
poise = "0.6.1"
tokio-stream = "0.1"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.config]
version = "0.13"
default-features = false
features = ["toml"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.18"
features = ["process", "rt-multi-thread"]

[dependencies.zbus]
version = "3.2"
default-features = false
features = ["tokio"]
